Update AZ-900 - 3.md

--- a/Azure/AZ-900/AZ-900 - 3.md
+++ b/Azure/AZ-900/AZ-900 - 3.md
@@ -66,3 +66,32 @@
         - You could also train your own models with Azure ML Service
     - Do you have custom/personal data you want to make predictions with?
         - You can use Azure ML Service to create, test and deploy your own models
+
+## **_Choose the best Azure serverless technology for your business scenario_**
+- Serverless computing: an execution environment is set up and managed for you
+- You write the code and Azure deploys, runs and scales it
+- Primarily for back-end services like reacting to events triggered by REST endpoints or a timer
+- Azure Functions
+    - Event driven
+    - You have to code the functions yourself
+    - Can be a single method or function coded in C#, Python, JavaScript, Typescript, Java, and PowerShell
+    - Azure Functions are stateless (but you could hook them up to an Azure storage account if you need to save state)
+    - When you care about the code and not the infrastructure it's running on
+- Azure Logic Apps
+    - Use when you need to respond to events
+    - Low-code / no-code development using Logic Apps Designer
+    - Use when demand is variable
+- What are the differences between these services?
+    - You can call Azure Functions from Azure Logic Apps, and vice versa. The primary difference between the two services is their intent. Azure Functions is a serverless compute service, and Azure Logic Apps is intended to be a serverless orchestration service.
+- Analyze the decision criteria
+    - Do you need to perform an orchestration across APIs?
+        - Lots of common connectors are already built for Azure Logic Apps
+        - You can create your own if necessary
+        - Otherwise, just drag and drop graphical code blocks to create the app
+    - Do you need to run custom algorithms or specialized data parsing or lookups?
+        - For specialized cases you'll want to use Azure Functions so you can write your own code
+    - Do you have existing automated tasks already written?
+        - If your functions are already written then you can use Azure Functions to deploy them straight to Azure
+    - Do you prefer visual/declarative or written/imperative coding?
+        - Azure Functions is for written code
+        - You "write" Logic apps with a graphical interface
