--- a/Azure/AZ-900/AZ-900 - 3.md
+++ b/Azure/AZ-900/AZ-900 - 3.md
@@ -95,3 +95,30 @@
     - Do you prefer visual/declarative or written/imperative coding?
         - Azure Functions is for written code
         - You "write" Logic apps with a graphical interface
+
+## **_Choose the best tools to help organizations build better solutions_**
+- The role of DevOps is to automate ongoing development so that software can be tested and released quickly
+- Some parts of DevOps: source-code management, continuous integration and continuous delivery (CI/CD), automating testing environments
+- Azure DevOps Services
+    - Azure Repos - Store repos
+    - Azure Boards - Use task boards and reporting tools to organize work
+    - Azure Pipelines - CI/CD pipeline automation
+    - Azure Artifacts - is a repository to Host artifacts, like compiled source code, for feeding into deployment of testing pipeline steps
+    - Azure Test Plans - Automated test tool
+- GitHub and GitHub Actions
+    - Great for open-source
+    - Can automate a CI/CD toolchain
+        - a toolchain is a combo of software tools that work to deliver, deploy and manage apps
+        - output of one step in the chain is the input to the next
+        - things done in toolchain: automated dependency updates, build/configure software, build artifacts, run tests, etc.
+        - lighter weight than Azure DevOps, is more public, geared for individual developers
+- Azure DevTest Labs
+    - Builds, sets up and tears down VMs used to test your software builds
+    - Creates various environments for testing
+    - Management can restrict how many environments can be built and how long they can run for
+- Analyze the decision criteria
+    - Automate test-lab creation? Azure DevTest
+    - Building open-source software? GitHub
+    - Need granular control over permissions? Azure DevOps
+    - Do you need sophisticated project management and reporting? Azure DevOps
+    - Do you need to integrate tightly with third-party tools? check which platform the third-party tool integrates with
