--- a/Azure/AZ-900/AZ-900 - 3.md
+++ b/Azure/AZ-900/AZ-900 - 3.md
@@ -122,3 +122,45 @@
     - Need granular control over permissions? Azure DevOps
     - Do you need sophisticated project management and reporting? Azure DevOps
     - Do you need to integrate tightly with third-party tools? check which platform the third-party tool integrates with
+
+## **_Choose the best tools for managing and configuring your Azure environment_**
+- By using Azure management tools, administrators, developers, and managers can interact with the cloud environment to perform such tasks as:
+  - Deploying dozens or hundreds of resources at a time.
+  - Configuring individual services programmatically.
+  - Viewing rich reports across usage, health, costs, and more.
+- There are visual and code-based tools, and Azure provides both types
+- Code that can be run to set up resources is called "infrastructure as code"
+    - can either be imperative or declarative code
+    - imperative code: details each step
+    - declarative code: outlines the outcome and lets the interpreter decide how to reach the outcome
+    - declarative code is best for when you want to deploy dozens or hundreds of resources at once
+- Azure portal
+    - you can access pretty much every Azure feature
+    - has a UI interface
+    - create, deploy, configure resources
+    - view reports
+- Azure mobile app
+    - monitor status of resources
+    - check for alerts, restart apps or VMs
+    - run Azure CLI or Azure PowerShell commands
+- Azure PowerShell
+    - execute "cmdlets"
+    - can create scripts
+    - can do every management task in Azure
+    - use imperative code/script to deploy and entire infrastructure
+    - can be used through the Azure Cloud Shell or through PowerShell on any computer
+    - you can transfer your PowerShell knowledge to using Azure
+- Azure CLI
+    - use Azure through a Bash shell
+    - you can perform any possible Azure management task
+    - can be accessed through any computer running Bash or through the Cloud Shell
+- ARM (Azure Resource Manager) templates
+    - scripts that deploy lots of resources that depend on each other and probably need to be deployed/created in a certain order
+    - written in JSON
+    - the template is verified before running to make sure no mistakes were made
+    - templates can execute Bash/PowerShell scripts before or after a resource has been set up
+    - declarative, unlike Bash/PowerShell scripts
+- Analyze the decision criteria
+    - need to perform one-time management, admin or reporting actions? it's fastest to use Azure PowerShell or Azure CLI (on desktop or on mobile)
+    - need to set up resources and ensure dependencies are created in the right order? use an ARM template to ensure the template will create everything in the correct order BEFORE running the script
+    - do you have Linux or Windows admin background? if Windows, you'd use Azure PowerShell; if Linux, you'd use Azure CLI (Bash)
