Update AZ-900 - 3.md

--- a/Azure/AZ-900/AZ-900 - 3.md
+++ b/Azure/AZ-900/AZ-900 - 3.md
@@ -164,3 +164,33 @@
     - need to perform one-time management, admin or reporting actions? it's fastest to use Azure PowerShell or Azure CLI (on desktop or on mobile)
     - need to set up resources and ensure dependencies are created in the right order? use an ARM template to ensure the template will create everything in the correct order BEFORE running the script
     - do you have Linux or Windows admin background? if Windows, you'd use Azure PowerShell; if Linux, you'd use Azure CLI (Bash)
+
+## **_Choose the best monitoring service for visibility, insight, and outage mitigation_**
+- Questions for companies to ask
+    - are we spending too much money on cloud services?
+    - could we be utilizing our cloud resources better?
+    - are our systems secured?
+    - what happens when we experience a regional outage?
+    - how can we figure out the cause of an outage
+    - how do we plan downtime for fixes/updates?
+- Use Azure monitoring services to
+    - Get insights to be sure you've optimized your cloud usage
+    - Diagnose issues
+    - Prepare for planned downtime
+- Azure Advisor
+    - It analyses your Azure resources
+    - It recommends ways to optimize reliability, security, performance and cost
+- Azure Monitor
+    - Collects, analyses, visualizes and potentially takes action on logging data
+    - It powers application insights to find the root cause of issues
+    - You can set it to send alerts when things go wrong, including text message alerts
+    - Azure Application Insights uses Azure Monitor under the hood
+- Azure Service Health
+    - Provides a view of the health of the Azure services, regions and resources that you rely on
+    - Shows history and root cause analyses
+    - Lets you know about service issues (outages, etc.), planned maintenance and health advisories
+- Analyze the decision criteria
+    - Do you need to reduce costs, improve resilience or harden your security? Azure Advisor
+    - Do you want to monitor your Azure usage and services? Azure Service Health, or Azure Monitor if you want to track issues specific to individual resources
+    - Do you want to measure custom events? Azure Monitor
+    - Do you need alerts for outages? Azure Monitor
