Update AZ-900 - 4.md

--- a/Azure/AZ-900/AZ-900 - 4.md
+++ b/Azure/AZ-900/AZ-900 - 4.md
@@ -57,13 +57,13 @@
 ## **_Secure network connectivity on Azure_**
 - Defense in depth: protect information and prevent it from being stolen or accessed by unauthorized people
 - Layers (outside to inside)
-    - physical security                       |![image](https://user-images.githubusercontent.com/84464752/196028096-1ed501b1-b074-4bc4-b057-45265d4d9692.png)
-    - identity + access                       |
-    - perimeter (protects from DDoS attacks)  |
-    - network                                 |
-    - compute (access to VMs)                 |
-    - application                             |
-    - data                                    |
+    | physical security                       | ![image](https://user-images.githubusercontent.com/84464752/196028096-1ed501b1-b074-4bc4-b057-45265d4d9692.png) |
+    | identity + access                       | |
+    | perimeter (protects from DDoS attacks)  | |
+    | network                                 | |
+    | compute (access to VMs)                 | |
+    | application                             | |
+    | data                                    | |
 - Each layer provides protection
 - Azure has security tools at each of these layers
 - Security posture: your ability to protect from and respond to attacks
