--- a/Azure/AZ-900/AZ-900 - 4.md
+++ b/Azure/AZ-900/AZ-900 - 4.md
@@ -57,50 +57,51 @@
 ## **_Secure network connectivity on Azure_**
 - Defense in depth: protect information and prevent it from being stolen or accessed by unauthorized people
 - Layers (outside to inside)
-    | physical security                       | ![image](https://user-images.githubusercontent.com/84464752/196028096-1ed501b1-b074-4bc4-b057-45265d4d9692.png) |
-    | identity + access                       | |
-    | perimeter (protects from DDoS attacks)  | |
-    | network                                 | |
-    | compute (access to VMs)                 | |
-    | application                             | |
-    | data                                    | |
+  - ![image](https://user-images.githubusercontent.com/84464752/196028150-71a1bae2-60bb-4312-abe6-ef5052501ab3.png)
+  - physical security
+  - identity + access
+  - perimeter (protects from DDoS attacks)
+  - network
+  - compute (access to VMs)
+  - application
+  - data
 - Each layer provides protection
 - Azure has security tools at each of these layers
 - Security posture: your ability to protect from and respond to attacks
     - CIA
-        - confidentiality: deny access by default and only give permission to people who need it
-        - integrity: preventing changes to information when it's at rest and when it's in transit, one-way hashing algs are often used
-        - availability: ensure services are available to authorized users and nobody's degrading the systems availability (through a DDoS, for example)
+        - Confidentiality: deny access by default and only give permission to people who need it
+        - Integrity: preventing changes to information when it's at rest and when it's in transit, one-way hashing algs are often used
+        - Availability: ensure services are available to authorized users and nobody's degrading the systems availability (through a DDoS, for example)
 - Azure Firewall
-    - firewall: monitors incoming/outgoing network traffic and decides which requests to let pass based on security rules
-    - you can set rules that allow requests from a certain range of IP addresses pass through
-    - rules can also include port and network protocol info
+    - Firewall: monitors incoming/outgoing network traffic and decides which requests to let pass based on security rules
+    - You can set rules that allow requests from a certain range of IP addresses pass through
+    - Rules can also include port and network protocol info
     - Azure Firewall sits between your vnets, your on-prem network and the public web
-    - it's a stateful firewall which means it analyzes the whole network connection instead of just individual packets
-    - features
-        - high availability
-        - cloud scalability
-        - inbound/outbound filtering rules
-        - inbound Destination Network Address Translation (DNAT) support
+    - It's a stateful firewall which means it analyzes the whole network connection instead of just individual packets
+    - Features
+        - High availability
+        - Cloud scalability
+        - Inbound/outbound filtering rules
+        - Inbound Destination Network Address Translation (DNAT) support
         - Azure Monitor logging
-    - the firewall should live on a network that connects your vnets, local networks and the internet
-    - you can configure
+    - The firewall should live on a network that connects your vnets, local networks and the internet
+    - You can configure
         - rules that define fully qualified domain names (FQDNs) that can be accesses from a subnet
         - rules that define source address, protocol, destination port and destination addresses
         - Network Address Translation (NAT) rules that determine the destination IP and port for inbound requests
     - Azure also provides web application firewalls (WAFs) through Azure Application Gateway, Azure Front Door and Azure Content Delivery Network
 - Azure DDoS Protection
-    - a distributed denial of service attack attempts to overload an app's network resources by flooding it with requests
+    - A distributed denial of service attack attempts to overload an app's network resources by flooding it with requests
     - DDoS Protection uses Microsoft's global network to provide DDoS mitigation to every region
     - DDoS Protection analyses and discards DDoS traffic
-    - offers the same level of protection that Microsoft uses to protect its online services
-    - service tiers
-        - basic (free with Azure subscription)
-        - standard offers additional capabilities tuned to work specifically with Azure vnets
-    - types of attacks it protects from
-        - volumetric attacks
-        - protocol attacks (exploit weakness at L3 and L4)
-        - application layer (only applies to app firewalls, WAFs)
+    - Offers the same level of protection that Microsoft uses to protect its online services
+    - Service tiers
+        - Basic (free with Azure subscription)
+        - Standard offers additional capabilities tuned to work specifically with Azure vnets
+    - Types of attacks it protects from
+        - Volumetric attacks
+        - Protocol attacks (exploit weakness at L3 and L4)
+        - Application layer (only applies to app firewalls, WAFs)
 - Network security groups (NSGs)
-    - you can authorize groups to only access specific resources within a vnet
-    - you filter traffic based on source, destination, port and protocol
+    - You can authorize groups to only access specific resources within a vnet
+    - You filter traffic based on source, destination, port and protocol
